# lbnes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yaml  main.cpp
.github/workflows/: cmake.yml
debugging/: nes_debugger.h
images/: lbnes.rc  win-icon LICENSE.txt
include/: arguments_manager.hpp  configurator.h  configurator.hpp  nes.h  nes.hpp  sdl_manager.h
include/bus/: bus.h  bus.hpp
include/debugging/: nes_debugger.h
include/devices/: device.h  device.hpp
include/devices/cartridges/: cartridge.h  cartridge.hpp
include/devices/cartridges/exceptions/: cartridge_exception.h
include/devices/cpu/: 6502.h  6502.hpp
include/devices/inputs/: joypad.h  joypad.hpp
include/devices/memories/: memory.h  memory.hpp  ppu_nametable_ram.h  ppu_nametable_ram.hpp  ppu_palette_ram.h  ppu_palette_ram.hpp  ram.h  ram.hpp
include/devices/ppu/: oam.h  oam.hpp  ppu.h  ppu.hpp
include/devices/ppu/exceptions/: ppu_exception.h
include/forwards/: classes.h  classes.hpp
include/graphics/: imgui_manager.hpp  sdl_manager.h  sdl_manager.hpp
include/misc/: base64.h  logger.hpp  macros.h  state.h
include/network/: client.hpp  server.hpp
include/options/: arguments_manager.hpp  configurator.hpp
src/: arguments_manager.cpp  configurator.cpp  nes.cpp  sdl_manager.cpp
src/bus/: bus.cpp
src/debugging/: nes_debugger.cpp
src/devices/: device.cpp
src/devices/cartridges/: cartridge.cpp  read_ines.cpp
src/devices/cpu/6502/: 6502.cpp  6502_addressing_modes.cpp  6502_instructions.cpp
src/devices/inputs/: joypad.cpp
src/devices/memories/: memory.cpp  ppu_nametable_ram.cpp  ppu_palette_ram.cpp  ram.cpp
src/devices/ppu/: oam.cpp  ppu.cpp
src/graphics/: imgui_manager.cpp  sdl_manager.cpp
src/misc/: base64.cpp
src/network/: client.cpp  server.cpp
src/options/: arguments_manager.cpp  configurator.cpp
testing/: main-testing.cpp
testing/devices/cartridges/: cartridge.cpp  cartridge.h
testing/devices/cpu/6502/addressing_modes/: addressing_modes.cpp  addressing_modes.h
testing/devices/cpu/6502/instructions/: arithmetic.cpp  arithmetic.h  branch.cpp  branch.h  increments_decrements.cpp  increments_decrements.h  instructions.h  jump.cpp  jump.h  load_store.cpp  load_store.h  logical.cpp  logical.h  shifts.cpp  shifts.h  stack.cpp  stack.h  status.cpp  status.h  system.cpp  system.h  transfer.cpp  transfer.h
testing/devices/ppu/: ppu.cpp  ppu.h
